--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,46 @@
 [package]
 name = "frostgate-circuits"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
-authors = ["Frostgate Labs"]
-license = "Apache-2.0"
 description = "Zero-knowledge circuit implementations for Frostgate"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
-sp1-zkvm = { workspace = true }
-alloy-sol-types = { workspace = true }
-frostgate-lib = { path = "../lib" }
-serde = { workspace = true }
-bincode = { workspace = true }
-sha3 = "0.10"
+frostgate-zkip = { path = "../frostgate-zkip", default-features = false }
+sp1-zkvm = { version = "5.0.0", default-features = false }
+sp1-core = { version = "0.2", default-features = false }
+sp1-prover = { version = "5.0.0", default-features = false }
+sp1-sdk = { version = "5.0.0", features = ["network"], default-features = false }
+async-trait = { version = "0.1", default-features = false }
+tokio = { version = "1.0", features = ["full"], optional = true }
+parking_lot = "0.12"
+bincode = { version = "1.3", default-features = false }
+hex = { version = "0.4", default-features = false }
+thiserror = { version = "1.0", default-features = false }
+tracing = { version = "0.1", default-features = false }
+num_cpus = { version = "1.16", default-features = false }
+lru = { version = "0.12", default-features = false }
+
+[dev-dependencies]
+tokio-test = "0.4"
+anyhow = "1.0"
+tempfile = "3.8"
+serde_json = "1.0"
 
 [features]
 default = ["std"]
 std = [
-    "alloy-sol-types/std",
-    "serde/std",
+    "frostgate-zkip/std",
+    "sp1-zkvm/std",
+    "sp1-core/std",
+    "sp1-prover/std",
+    "sp1-sdk/std",
+    "async-trait/std",
+    "tokio",
+    "bincode/std",
+    "hex/std",
+    "thiserror/std",
+    "tracing/std",
+    "num_cpus/std",
+    "lru/std",
 ]
