--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 frostgate-zkip = { path = "../frostgate-zkip", default-features = false }
 sp1-zkvm = { version = "5.0.0", default-features = false }
-sp1-core = { version = "0.2", default-features = false }
+sp1-core = { version = "0.0.2-test", default-features = false }
 sp1-prover = { version = "5.0.0", default-features = false }
 sp1-sdk = { version = "5.0.0", features = ["network"], default-features = false }
 async-trait = { version = "0.1", default-features = false }
@@ -31,16 +31,7 @@ serde_json = "1.0"
 default = ["std"]
 std = [
     "frostgate-zkip/std",
-    "sp1-zkvm/std",
-    "sp1-core/std",
-    "sp1-prover/std",
-    "sp1-sdk/std",
-    "async-trait/std",
     "tokio",
-    "bincode/std",
     "hex/std",
-    "thiserror/std",
     "tracing/std",
-    "num_cpus/std",
-    "lru/std",
 ]
