--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,33 +12,35 @@ sp1-core-machine = "5.0.0"
 sp1-zkvm = "5.0.0"
 sp1-prover = "5.0.0"
 sp1-sdk = { version = "5.0.0", features = ["network"] }
-risc0-zkvm = "0.19"
+risc0-zkvm = { version = "0.19", features = ["prove"] }
 sha2 = "0.10"
-rayon = "1.8.0"
+rayon = "1.8"
 futures = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 parking_lot = "0.12"
-lru = "0.12.1"
+lru = "0.12"
 thiserror = "1.0"
 async-trait = "0.1"
-uuid = { version = "1.7.0", features = ["v4"] }
-hex = { version = "0.4.3", features = ["serde"] }
+uuid = { version = "1.6", features = ["v4"] }
+hex = "0.4"
 p3-maybe-rayon = "0.1.3-succinct"
 frostgate-zkip = { path = "../frostgate-zkip" }
 tracing = "0.1"
 tokio = { version = "1.36.0", features = ["full"], optional = true }
 bincode = "1.3"
 serde_json = "1.0"
+blake2 = "0.10"
 
 [dev-dependencies]
 anyhow = "1.0"
 tempfile = "3.8"
 
 [features]
-default = ["std"]
+default = ["std", "prove"]
 std = [
     "frostgate-zkip/std",
     "tokio",
     "hex/std",
     "tracing/std",
 ]
+prove = []
